--- a/tenmo-server/src/main/resources/application.properties
+++ b/tenmo-server/src/main/resources/application.properties
@@ -14,3 +14,8 @@ jwt.route.authentication.path=/login
 jwt.route.authentication.refresh=/refresh
 
 server.error.include-stacktrace=never
+
+spring.thymeleaf.prefix=classpath:/templates/
+spring.thymeleaf.suffix=.html
+spring.thymeleaf.mode=HTML
+spring.thymeleaf.encoding=UTF-8
