worked on client application, further decoupled code, added new endpoint

--- a/tenmo-server/src/main/resources/application.properties
+++ b/tenmo-server/src/main/resources/application.properties
@@ -19,3 +19,5 @@ spring.thymeleaf.prefix=classpath:/templates/
 spring.thymeleaf.suffix=.html
 spring.thymeleaf.mode=HTML
 spring.thymeleaf.encoding=UTF-8
+
+logging.file.path=tenmo-server/server-logs
