--- a/tenmo-server/src/main/resources/application.properties
+++ b/tenmo-server/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 # datasource connection properties
-spring.datasource.url=jdbc:postgresql://localhost:5432/tenmo
+spring.datasource.url=jdbc:postgresql://localhost:5432/TenmoService
 spring.datasource.name=tenmo
 spring.datasource.username=postgres
 spring.datasource.password=DeltaMike8816
