--- a/tenmo-server/src/main/resources/application.properties
+++ b/tenmo-server/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 # datasource connection properties
 spring.datasource.url=jdbc:postgresql://localhost:5432/TenmoService
 spring.datasource.name=tenmo
-spring.datasource.username=postgres
+spring.datasource.username=yohannesmata
 spring.datasource.password=DeltaMike8816
 
 spring.jpa.show-sql=true
