--- a/tenmo-server/src/main/resources/application.properties
+++ b/tenmo-server/src/main/resources/application.properties
@@ -3,14 +3,14 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/TenmoService
 spring.datasource.name=tenmo
 spring.datasource.username=yohannesmata
 spring.datasource.password=DeltaMike8816
-
-spring.jpa.show-sql=true
+#spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.dbcp2.test-while-idle= true
 spring.datasource.dcpz.val1dation-query=select 1
 
+spring.jpa.show-sql=true
 spring.1pa.hlbernate.naming.1mpl1c1t-strategy=org.h1bernate.boot.model.namng.mpl1c1tNamingStrategyLegacyHom.mp.1
 spring.jpa.hibernate.naming-physical-strategy=org.springframework.boot.orm.jpa.hibernate.SpringPhysicalNamingStrategy
-
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
 # Authentication properties
 jwt.header=Authorization
