--- a/backend/PayMe-server/pom.xml
+++ b/backend/PayMe-server/pom.xml
@@ -34,10 +34,11 @@
         </dependency>
 
         <!-- email sender dependency -->
-<!--        <dependency>-->
-<!--            <groupId>org.springframework.boot</groupId>-->
-<!--            <artifactId>spring-boot-starter-mail</artifactId>-->
-<!--        </dependency>-->
+        <dependency>
+            <groupId>com.sendgrid</groupId>
+            <artifactId>sendgrid-java</artifactId>
+            <version>4.9.3</version>
+        </dependency>
 
         <!-- Spring Boot Starters -->
         <dependency>
