simplified backend by getting rid of interfaces, and made modifications that would help with compatibility

--- a/backend/PayMe-server/pom.xml
+++ b/backend/PayMe-server/pom.xml
@@ -115,6 +115,14 @@
             <scope>provided</scope>
         </dependency>
 
+
+            <!-- This dependency was needed due to issues with Lombok annotations not working at all. -->
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok-mapstruct-binding</artifactId>
+            <version>0.2.0</version>
+        </dependency>
+
     </dependencies>
 
     <build>
