fixed issue preventing backend to function, cleaned up authentication methods and flow, fixed user details not being fetched

--- a/backend/PayMe-server/pom.xml
+++ b/backend/PayMe-server/pom.xml
@@ -27,6 +27,13 @@
     </properties>
 
     <dependencies>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-logging</artifactId>
+        </dependency>
+
+
         <!-- Spring Boot Security -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
