--- a/gateway/src/main/resources/properties.yml
+++ b/gateway/src/main/resources/properties.yml
@@ -7,9 +7,13 @@ spring:
 # Custom application properties.
 application:
   security:
+#    eventually wont be hardcoded
+    gateway:
+      api-key: ur4Oa8sqOiq3XpJEbW5jFD9iNoOHE+RuKiuYtm/Zn4c=
     password:
       pattern: '^(?=.*[A-Z])(?=.*[0-9!@#$%^&*]).{6,}$'
       message: "Password must be 6+ characters long, have at least 1 capital letter, and a number or special character."
   api:
     endpoints:
       authentication-service: "http://localhost:8080/api/v1/auth"
+
