--- a/gateway/src/main/resources/properties.yml
+++ b/gateway/src/main/resources/properties.yml
@@ -1,13 +1,38 @@
 server:
   port: 8082
+
 spring:
   application:
     name: gateway
 
+  redis:
+    host: localhost
+    port: 6379
+  cloud:
+    gateway:
+      routes:
+        - id: authentication-service
+          uri: http://localhost:8080
+          predicates:
+            - Path= /api/v1/auth/**
+
+        - id: user-service
+          uri: http://localhost:8080
+          predicates:
+            - Path= /api/v1/user/**
+
+          filters:
+            - name: RequestRateLimiter
+              args:
+                redis-rate-limiter.replenishmentRate: 5
+                redis-rate-limiter.burstCapacity: 10
+                key-resolver: "#{@userKeyResolver}"
+
+
 # Custom application properties.
 application:
   security:
-#    eventually wont be hardcoded
+    # Eventually wont be hardcoded
     gateway:
       api-key: ur4Oa8sqOiq3XpJEbW5jFD9iNoOHE+RuKiuYtm/Zn4c=
     password:
