--- a/backend/PayMe-server/src/test/resources/application-test.yml
+++ b/backend/PayMe-server/src/test/resources/application-test.yml
@@ -8,6 +8,7 @@ spring:
     console:
       enabled: true
   jpa:
+    database-platform: org.hibernate.dialect.H2Dialect
     hibernate:
       ddl-auto: update
     show-sql: true
