decoupled authentication from session related logic. Now it's more focused on solely authentication

--- a/backend/Authentication/Dockerfile
+++ b/backend/Authentication/Dockerfile
@@ -2,7 +2,6 @@ FROM openjdk:21-slim
 
 WORKDIR /app
 
-COPY target/PayMe.jar PayMe.jar
+COPY target/authentication-1.0.jar authentication-1.0.jar
 
-
-ENTRYPOINT ["java", "-jar","PayMe.jar"]
+ENTRYPOINT ["java", "-jar","authentication-1.0.jar"]
