added a way for auth and user services to communicate, centralized some logs, discarded unused assets

--- a/backend/Authentication/pom.xml
+++ b/backend/Authentication/pom.xml
@@ -71,6 +71,13 @@
             <version>0.11.1</version>
         </dependency>
 
+        <!-- Redis -->
+<!--        <dependency>-->
+<!--            <groupId>org.springframework.boot</groupId>-->
+<!--            <artifactId>spring-boot-starter-data-redis</artifactId>-->
+<!--        </dependency>-->
+        <!--might need pooling dependency so the redis connections aren't constantly opening and closing -->
+
         <!-- Database Driver -->
         <dependency>
             <groupId>org.postgresql</groupId>
@@ -128,11 +135,6 @@
             <artifactId>lombok</artifactId>
             <version>1.18.34</version>
             <scope>provided</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.projectlombok</groupId>
-            <artifactId>lombok-mapstruct-binding</artifactId>
-            <version>0.2.0</version>
         </dependency>
 
         <!--shared models dependency-->
