--- a/backend/Authentication/src/test/resources/application-test.yml
+++ b/backend/Authentication/src/test/resources/application-test.yml
@@ -1,14 +1,14 @@
 spring:
   datasource:
-    url: jdbc:h2:mem:testdb;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
-    driverClassName: org.h2.Driver
-    username: sa
+    url:
+    driverClassName:
+    username: user
     password: password
   h2:
     console:
       enabled: true
   jpa:
-    database-platform: org.hibernate.dialect.H2Dialect
+    database-platform:
     hibernate:
       ddl-auto: update
     show-sql: true
