worked on global token generator, and reworked token service to be used for secure inner service communication

--- a/backend/Internal-Services/Service-Registry/pom.xml
+++ b/backend/Internal-Services/Service-Registry/pom.xml
@@ -9,7 +9,7 @@
         <version>1.0</version>
     </parent>
 
-    <artifactId>Serivce-Registry</artifactId>
+    <artifactId>Service-Registry</artifactId>
 
     <properties>
         <maven.compiler.source>22</maven.compiler.source>
