--- a/backend/Internal-Services/Credential-Provider/pom.xml
+++ b/backend/Internal-Services/Credential-Provider/pom.xml
@@ -9,7 +9,7 @@
         <version>1.0</version>
     </parent>
 
-    <artifactId>Credential Provider</artifactId>
+    <artifactId>Credential-Provider</artifactId>
 
     <properties>
         <maven.compiler.source>22</maven.compiler.source>
