fixed issue preventing access to open endpoints within token provider, worked on a standard jwt validator for all services to use or build off, added whitelisted endpoints to token provider

--- a/backend/common-models/common-models/pom.xml
+++ b/backend/common-models/common-models/pom.xml
@@ -61,6 +61,22 @@
       <version>6.4.7.Final</version>
     </dependency>
 
+    <dependency>
+      <groupId>io.jsonwebtoken</groupId>
+      <artifactId>jjwt-api</artifactId>
+      <version>0.11.1</version>
+    </dependency>
+    <dependency>
+      <groupId>io.jsonwebtoken</groupId>
+      <artifactId>jjwt-impl</artifactId>
+      <version>0.11.1</version>
+    </dependency>
+    <dependency>
+      <groupId>io.jsonwebtoken</groupId>
+      <artifactId>jjwt-jackson</artifactId>
+      <version>0.11.1</version>
+    </dependency>
+
   </dependencies>
 
   <build>
