--- a/backend/token-provider/pom.xml
+++ b/backend/token-provider/pom.xml
@@ -32,10 +32,10 @@
 
 	<dependencies>
 
-<!--		<dependency>-->
-<!--			<groupId>org.springframework.boot</groupId>-->
-<!--			<artifactId>spring-boot-starter-security</artifactId>-->
-<!--		</dependency>-->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-security</artifactId>
+		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
@@ -88,6 +88,12 @@
 			<groupId>io.jsonwebtoken</groupId>
 			<artifactId>jjwt-jackson</artifactId>
 			<version>0.11.1</version>
+		</dependency>
+
+		<dependency>
+			<groupId>com.payme</groupId>
+			<artifactId>common-models</artifactId>
+			<version>1.0</version>
 		</dependency>
 
 	</dependencies>
