--- a/backend/common-models/common-models/pom.xml
+++ b/backend/common-models/common-models/pom.xml
@@ -12,6 +12,7 @@
   <url>http://maven.apache.org</url>
 
   <properties>
+    <java.version>21</java.version>
     <maven.compiler.source>21</maven.compiler.source>
     <maven.compiler.target>21</maven.compiler.target>
   </properties>
