--- a/backend/token-provider/Dockerfile
+++ b/backend/token-provider/Dockerfile
@@ -3,8 +3,7 @@ FROM maven:3.9.9 as builder
 
 WORKDIR /build
 
-COPY pom.xml .
-COPY src .
+COPY . .
 COPY settings.xml /root/.m2/settings.xml
 
 RUN mvn clean package -DskipTests
