added environment setup scripts for EC2 instances.

--- a/backend/Libraries/Nexus/docker-compose.yml
+++ b/backend/Libraries/Nexus/docker-compose.yml
@@ -1,6 +1,6 @@
 services:
   nexus:
+    container_name: nexus-java-libs
     image: sonatype/nexus3
-    container_name: nexus
     ports:
       - "8083:8081"
