Purged old and non-needed resources, began setup for rework

--- a/backend/Authentication-Service/pom.xml
+++ b/backend/Authentication-Service/pom.xml
@@ -28,6 +28,10 @@
     </properties>
 
     <dependencies>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-oauth2-client</artifactId>
+        </dependency>
         <!--Starters -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -41,10 +45,10 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-jdbc</artifactId>
         </dependency>
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-security</artifactId>
-        </dependency>
+<!--        <dependency>-->
+<!--            <groupId>org.springframework.boot</groupId>-->
+<!--            <artifactId>spring-boot-starter-security</artifactId>-->
+<!--        </dependency>-->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-validation</artifactId>
@@ -139,8 +143,8 @@
         <!--shared models dependency-->
         <dependency>
             <groupId>com.payme</groupId>
-            <artifactId>common-models</artifactId>
-            <version>1.0</version>
+            <artifactId>internal-tools</artifactId>
+            <version>1.0.0</version>
         </dependency>
 
     </dependencies>
