worked on webclient for the Authentication-System, added indexes to user table, removed old bloat.

--- a/backend/Authentication-Service/src/main/resources/application.yml
+++ b/backend/Authentication-Service/src/main/resources/application.yml
@@ -7,4 +7,4 @@ spring:
     driver-class-name: org.postgresql.Driver
   jackson:
     deserialization:
-      fail-on-unknown-properties: true # Prevents generating token if client sends invalid json properties.
+      fail-on-unknown-properties: true # Prevents generating accessToken if client sends invalid json properties.
