--- a/backend/Authentication-Service/pom.xml
+++ b/backend/Authentication-Service/pom.xml
@@ -151,6 +151,18 @@
             <version>1.0.0</version>
         </dependency>
 
+        <!-- Rate Limitting -->
+        <dependency>
+            <groupId>com.bucket4j</groupId>
+            <artifactId>bucket4j-core</artifactId>
+            <version>8.10.1</version>
+        </dependency>
+        <dependency>
+            <groupId>com.bucket4j</groupId>
+            <artifactId>bucket4j-redis</artifactId>
+            <version>8.10.1</version>
+        </dependency>
+
     </dependencies>
 
 
