--- a/backend/Authentication-Service/pom.xml
+++ b/backend/Authentication-Service/pom.xml
@@ -61,7 +61,10 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-jpa</artifactId>
         </dependency>
-
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-redis</artifactId>
+        </dependency>
         <!-- JWT Dependencies -->
 <!--        <dependency>-->
 <!--            <groupId>io.jsonwebtoken</groupId>-->
