Fixed error preventing requests from being processed, added support for serializing Java dates, added some simple caching, and added some API documentation to auth service

--- a/backend/Authentication-Service/pom.xml
+++ b/backend/Authentication-Service/pom.xml
@@ -61,10 +61,6 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-jpa</artifactId>
         </dependency>
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-data-redis</artifactId>
-        </dependency>
         <!-- JWT Dependencies -->
 <!--        <dependency>-->
 <!--            <groupId>io.jsonwebtoken</groupId>-->
@@ -87,6 +83,14 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-redis</artifactId>
         </dependency>
+        <!-- Enables support for Java 8 date/time types (e.g., LocalDateTime) in Jackson serialization,
+             necessary for handling time fields correctly when storing objects in Redis or returning
+             JSON responses -->
+        <dependency>
+            <groupId>com.fasterxml.jackson.datatype</groupId>
+            <artifactId>jackson-datatype-jsr310</artifactId>
+        </dependency>
+
         <!--might need pooling dependency so the redis connections aren't constantly opening and closing -->
 
         <!-- Database Driver -->
@@ -164,6 +168,13 @@
             <groupId>com.bucket4j</groupId>
             <artifactId>bucket4j-redis</artifactId>
             <version>8.10.1</version>
+        </dependency>
+
+    <!--Documentation-->
+        <dependency>
+            <groupId>org.springdoc</groupId>
+            <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
+            <version>2.3.0</version>
         </dependency>
 
     </dependencies>
