Added methods that automatically initialize, rotate, and force rotate the signing key. Abstracted Key History for added flexibility and consumer choice of implementation.

--- a/server/Libraries/Token-Provider/deprecated/Dockerfile
+++ b/server/Libraries/Token-Provider/deprecated/Dockerfile
@@ -3,7 +3,7 @@ FROM maven:3.9.9 as builder
 
 WORKDIR /build
 
-COPY . .
+COPY .. .
 COPY settings.xml /root/.m2/settings.xml
 
 RUN mvn clean package -DskipTests
