--- a/server/Libraries/Token-Provider/src/main/resources/application.yml
+++ b/server/Libraries/Token-Provider/src/main/resources/application.yml
@@ -2,7 +2,7 @@ spring:
   profiles:
     active: dev
   application:
-    name: token-service
+    name: token-provider
   datasource:
     driver-class-name: org.postgresql.Driver
   jackson:
