--- a/server/Authentication-Service/pom.xml
+++ b/server/Authentication-Service/pom.xml
@@ -16,10 +16,8 @@
     <name>authentication</name>
     <description>Authentication system</description>
 
-
     <packaging>jar</packaging>
 
-<!--    java.version was 11 before-->
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
@@ -157,6 +155,11 @@
             <artifactId>internal-tools</artifactId>
             <version>1.0.0</version>
         </dependency>
+        <dependency>
+            <groupId>com.payme</groupId>
+            <artifactId>token-provider</artifactId>
+            <version>1.0.0</version>
+        </dependency>
 
         <!-- Rate Limitting -->
         <dependency>
@@ -170,7 +173,7 @@
             <version>8.10.1</version>
         </dependency>
 
-    <!--Documentation-->
+        <!--Documentation-->
         <dependency>
             <groupId>org.springdoc</groupId>
             <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
