--- a/server/Authentication-Service/pom.xml
+++ b/server/Authentication-Service/pom.xml
@@ -187,6 +187,11 @@
             <version>7.6.0</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.modelmapper</groupId>
+            <artifactId>modelmapper</artifactId>
+            <version>3.2.0</version>
+        </dependency>
     </dependencies>
 
 
