Added login attempt counter, ability to add or remove roles from users, removed role provider from auth and transferred to UserAccountService

--- a/server/Authentication-Service/pom.xml
+++ b/server/Authentication-Service/pom.xml
@@ -25,6 +25,13 @@
         <jjwt.version>0.11.1</jjwt.version>
     </properties>
 
+    <repositories>
+        <repository>
+            <id>github</id>
+            <url>https://maven.pkg.github.com/Yohannes09/internal-libs</url>
+        </repository>
+    </repositories>
+
     <dependencies>
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -59,22 +66,6 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-jpa</artifactId>
         </dependency>
-        <!-- JWT Dependencies -->
-<!--        <dependency>-->
-<!--            <groupId>io.jsonwebtoken</groupId>-->
-<!--            <artifactId>jjwt-api</artifactId>-->
-<!--            <version>0.11.1</version>-->
-<!--        </dependency>-->
-<!--        <dependency>-->
-<!--            <groupId>io.jsonwebtoken</groupId>-->
-<!--            <artifactId>jjwt-impl</artifactId>-->
-<!--            <version>0.11.1</version>-->
-<!--        </dependency>-->
-<!--        <dependency>-->
-<!--            <groupId>io.jsonwebtoken</groupId>-->
-<!--            <artifactId>jjwt-jackson</artifactId>-->
-<!--            <version>0.11.1</version>-->
-<!--        </dependency>-->
 
         <!-- Redis -->
         <dependency>
@@ -153,12 +144,12 @@
         <dependency>
             <groupId>com.payme</groupId>
             <artifactId>internal-tools</artifactId>
-            <version>1.0.0</version>
+            <version>1.0.1</version>
         </dependency>
         <dependency>
             <groupId>com.payme</groupId>
             <artifactId>token-provider</artifactId>
-            <version>1.0.1</version>
+            <version>1.0.2</version>
         </dependency>
 
         <!-- Rate Limitting -->
