--- a/server/Authentication-Service/docker-compose.yml
+++ b/server/Authentication-Service/docker-compose.yml
@@ -12,7 +12,7 @@ services:
       - postgres_data:/var/lib/postgresql/data
 
   authentication-service:
-      image: .
+      build: .
       restart: always
       ports:
         - 8081:8080
